# term

./: .gitignore  .gitmodules  Dockerfile  docker-compose.local.yml  docker-compose.yaml
nginx/: nginx.conf  nginx.local.conf
term-backend/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
term-backend/.github/workflows/: python-package.yml
term-backend/alembic/: env.py  script.py.mako
term-backend/alembic/versions/: 2024_04_16-5f3619cbb41f_init.py  2024_05_12-a1043a3cf03f_added_building_info_tables.py  2024_05_12-daad2f231ce8_fix_tables.py  2024_05_13-5244349c0295_update_table_build_info.py  2024_05_23-85b9c4a015c1_update_group.py  2024_06_03-a2b54cef67de_update_ondelete.py  2024_06_03-c0f022b91964_update_ondelete_for_group.py  2024_06_28-5d4daa1f7e29_update_section_part.py
term-backend/artifacts/: explanatorynote-01-03.xsd  units.json
term-backend/docker/: Dockerfile  docker-compose.local.yml
term-backend/service/: constants.py  dependencies.py  gunicorn_config.py  main.py  settings.py
term-backend/service/database/: common.py
term-backend/service/database/models/: building_project.py  users.py
term-backend/service/models/: building_project.py  s3_artifacts.py  sensors.py  users.py  xml_artifacts.py
term-backend/service/monitoring/: logger.py  logger_config.py
term-backend/service/routes/: auth.py  bim_artifacts.py  building_project.py  document_artifacts.py  group.py  health.py  sensors.py  users.py
term-backend/service/services/: group_service.py  user_group_db_context.py  user_manager.py  user_service.py
term-backend/service/utils/: building_project_xml_processor.py  db_context.py  errors.py  middleware.py  responses.py  s3_client.py  sensor_reader.py
term-backend/tests/: conftest.py
term-backend/tests/api/: test_health_and_metrics.py
term-backend/tests/s3_client/: conftest.py  test_s3_client.py
term-frontend/: .eslintrc.cjs  .gitignore  LICENSE  README.md  app.config.ts  app.vue  default.conf  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
term-frontend/assets/css/: normalize.css
term-frontend/assets/scss/: main.scss
term-frontend/components/: BimifyLogo.vue
term-frontend/components/contracts/: ContractsTable.vue
term-frontend/components/dispatching/: Chart.vue  Dispatching.vue  InfoCard.vue  SensorCard.vue
term-frontend/components/dispatching/calendar/: DatePicker.vue  DateRangePicker.vue
term-frontend/components/groups/: GroupsTable.vue
term-frontend/components/groups/modals/: CreateGroup.vue  EditGroup.vue  RemoveGroup.vue
term-frontend/components/management/: AdministrationSwitcher.vue  GroupObjectsSwitcher.vue  NavBar.vue  ObjectsSwitcher.vue  SectionsSwitcher.vue  TopMenu.vue
term-frontend/components/objects/create/: AddSectionModal.vue  RemoveSectionModal.vue  StepInfoAboutOKSManual.vue  StepInfoAboutObjectManual.vue  StepInfoAboutXml.vue  StepInfoLoadModel.vue
term-frontend/components/objects/documentations/: DocsTable.vue
term-frontend/components/objects/form/: AddressInfoFields.vue  BuildingForm.vue  ConstructionPartForm.vue  ExtraInfoFields.vue  IndicatorsInfoFields.vue
term-frontend/components/objects/manage/: ObjectsTable.vue
term-frontend/components/objects/model/: ModelLoading.vue  Viewer.vue
term-frontend/components/objects/tasks/: TasksSummary.vue  TasksTable.vue
term-frontend/components/profile/: UserEditForm.vue
term-frontend/components/promo/: About.vue  Advantages.vue  Banner.vue  Contacts.vue  Facilities.vue  Footer.vue  Header.vue  Projects.vue  QuickStart.vue
term-frontend/components/users/: UsersTable.vue
term-frontend/components/users/modals/: CreateUser.vue  EditUser.vue  (+1 more)
term-frontend/composables/: useMyFetch.ts
term-frontend/docker/: Dockerfile  docker-compose.yml
term-frontend/layouts/: default.vue  management.vue
term-frontend/middleware/: auth.ts
term-frontend/pages/: index.vue  login.vue
term-frontend/pages/management/: groups.vue  index.vue  profile.vue  users.vue
term-frontend/public/: robots.txt  sitemap.xml
term-frontend/store/: auth.ts  group.ts  user.ts
term-frontend/store/building/: bimArtifacts.ts  constructionPart.ts  constructionSection.ts  documentArtifacts.ts  index.ts  sensors.ts
term-frontend/utils/: artifacts.ts
term-frontend/utils/constants/: Buildings.ts  Groups.ts  Users.ts
term-frontend/utils/hooks/: useTableFilter.ts
term-frontend/utils/modelViewer/: clipper.ts  export.ts  generate.ts  highlighter.ts  label.ts  load.ts
term-frontend/utils/types/: Building.ts  Group.ts  User.ts
term-sp131/: default.conf
term-sp131/docker/: Dockerfile
term-sp131/src/: index.html  selectCity.js  style.css  zeroing.css
(+14 files in other folders)
