[tool.poetry]
authors = ["Dmitriy Astapkovich <dm.astapkovich@gmail.com>"]
description = ""
name = "term-backend"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiobotocore = "^2.12.3"
aiohttp = "^3.9.3"
alembic = "^1.13.1"
fastapi = {version = "^0.110.0", extras = ["all"]}
fastapi-restful = {version = "^0.5.0", extras = ["all"]}
fastapi-users = {version = "^13.0.0", extras = ["sqlalchemy"]}
gunicorn = "^21.2.0"
phonenumbers = "^8.13.34"
prometheus-client = "^0.20.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
python = "~3.12"
redis = "^5.0.3"
sqlalchemy = {version = "^2.0.20", extras = ["postgresql-asyncpg", "asyncio"]}
structlog = "^24.1.0"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
xmlschema = "^3.3.0"
influxdb-client = {version = "^1.43.0", extras = ["async"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
ruff = "^0.4.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.18.1"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-httpx = "^0.30.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.2"]

[tool.pytest.ini_options]
addopts = "-vv -rsx -p no:warnings --cov-fail-under=50"
asyncio_mode = "auto"
env_files = [".env.test"]

[tool.coverage.run]
branch = true
omit = [
  "service/monitoring/*",
  "service/gunicorn_config.py",
]
source = ["service"]

[tool.coverage.report]
exclude_lines = [
  "@(abc.)?abstractmethod",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_explicit = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_untyped_calls = true
explicit_package_bases = true
extra_checks = true
files = ["service", "tests"]
ignore_errors = false
ignore_missing_imports = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"
scripts_are_modules = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
fix = true
indent-width = 4
line-length = 120
target-version = "py312"
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["UP035", "E722"]
# Enable rules, in addition to the defaults. https://docs.astral.sh/ruff/rules
select = [
  "E", # pycodestyle Error
  "W", # pycodestyle Warning
  "F", # Pyflakes
  "I", # isort
  "PL", # Pylint
  "N", # pep8-naming
  "ARG", # flake8-unused-arguments
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "ASYNC", # flake8-async
  "S", # flake8-bandit
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "INP", # flake8-no-pep420
  "DTZ", # flake8-datetimez
  "NPY", # NumPy-specific rules
  "RUF", # Ruff-specific rules
  "ERA", # eradicate
  "TID", # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
# Ignore bandit and other rules for tests and utils
"{tests,utils,scripts}/*" = ["S", "PLR0913", "ARG002", "RUF001", "PLR2004", "N803"]
# Ignore unused method argument
"**/{alembic}/*" = ["ALL"]
# Ignore Russian character checking
"service/constants.py" = ["RUF001"]
"service/models/building_project.py" = ["RUF001"]
"service/models/service_types.py" = ["RUF001"]
"service/routes/bim_artifacts.py" = ["RUF001"]
"service/routes/building_project.py" = ["RUF001"]
"service/routes/document_artifacts.py" = ["RUF001"]
"service/routes/users.py" = ["RUF001"]
"service/routes/group.py" = ["RUF001"]
"service/utils/responses.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
